
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/), and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]- 

## Added

- Pushing release-candidates to Pypi with ensured transparent versioning using git tags.

### Removed

- Removed gitlab.com repository from pipeline.

## [1.7.0] - 2022.08.17

### Added

- Added local and full docker container for DMT-core. It is build in 3 steps
    - Builder: Builds ngspice, adms, trilinos and xyce
    - Base: copys from builder, texlive and installs only necessary runtime and python environment
    - full or Version_XX: Includes the latest or respective DMT install
- dmt example bash script which uses the docker container to run a python/dmt script.
- Generating CycloneDX SBOM from the container
- Added a RuntimeWarning when loading a parameter for a MCard which is out of bounds.
- Added a mdm-reader test case for SkywaterPDK raw measurement data
- Added an example to the docu how to read and handle the SkywaterPDK raw data in a DutLib
- Added McSkywater to simulate Skywater130 PDK models using DutNgspice
- Added an error for non-unique dut names in a DutLib. Names must be unique to generate separate save folders.

### Changed

- Correct Bibtex to cite for the published paper.
- format and test stages of the CI pipeline are done for reg-ex "main" (so incl. "pre-main"), the following only for "main"
- `SpecifierStr.sub_specifiers` are now `frozenset` instead of a list. This fixes the order issue and at the same time improves readability when testing.
- `SpecifierStr.__contains__` now properly testing containement without the shortcut using string casts.
- The DMT.core.Sweep attributes are now proteced by setters and getters to ensure types.
- All McParameter names are casted to lower case.

### Fixed

- CI Release name

## Deprecated

- DMT.core.naming.set_col_name deprecated as SpecifierStr creation is much better documented.
