@@ -10,6 +10,10 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 
 - Pushing release-candidates to Pypi with ensured transparent versioning using git tags.
 
+## Changed
+
+- Updated to pyqtgraph 0.13.1. QApplication in plot.py from QWidgets is tried to use, if this does not work, fall back to old implementation from Qt.QtGui
+
 ### Removed
 
 - Removed gitlab.com repository from pipeline.
